# RASPA3

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  DESIGN.md  FAQ.html  INSTALLATION.md  LICENSE.md  NOTES.md  README.md  STYLE_GUIDE.md  TODO.md  annotated.html  annotated_dup.js  basic1.html  bump_version.py  classMixturePrediction-members.html  classMixturePrediction.html  classes.html  commands.html  compiler-bugs  compiling.html  dir_01378b60c8590e62baf618640d0e391f.html  dir_01378b60c8590e62baf618640d0e391f_dep.map  dir_01378b60c8590e62baf618640d0e391f_dep.md5  dir_097d89f7d3d4a95fa7a0933d0d63ccec.html  dir_097d89f7d3d4a95fa7a0933d0d63ccec_dep.map  dir_097d89f7d3d4a95fa7a0933d0d63ccec_dep.md5  dir_1941aa83a5af9085a65ded6f804b22db.html  dir_1941aa83a5af9085a65ded6f804b22db_dep.map  dir_1941aa83a5af9085a65ded6f804b22db_dep.md5  dir_1f003e3f79cc02d4f1681c5c6f28dda4.html  dir_1f003e3f79cc02d4f1681c5c6f28dda4_dep.map  dir_1f003e3f79cc02d4f1681c5c6f28dda4_dep.md5  dir_2553fdce986248c2777a9df9da8dcc92.html  dir_2553fdce986248c2777a9df9da8dcc92_dep.map  dir_2553fdce986248c2777a9df9da8dcc92_dep.md5  dir_27cb3ca9627f8815bb71f1f8f8d626c4.html  dir_27cb3ca9627f8815bb71f1f8f8d626c4_dep.map  (+1271 more)
app/: CMakeLists.txt  main.cpp
benchmarks/: CMakeLists.txt
benchmarks/raspakit-benchmarks/: CMakeLists.txt  benchmark1.cpp  benchmark2.cpp  interactions.cpp  main.cpp  potentials.cpp  pow.cpp
cli/: CMakeLists.txt  commandline.cpp  commandline.ixx  main.cpp
data/: CMakeLists.txt
examples/: CMakeLists.txt  run.cmake.in
examples/Adsorption_CH4_in_MFI/: simulation.input  simulation.input-CH4
examples/Adsorption_CO2_in_MFI/: MFI_SI_2x2x2_P1.cif  MFI_SI_P1.cif  force_field_mixing_rules.def  simulation.input
examples/ExternalFieldBox/: force_field_mixing_rules.def  simulation.input
examples/Gibbs_CO2/: simulation.input
examples/Gibbs_CO2_CFCMC/: run  simulation.input
examples/Gibbs_methane_CFCMC/: simulation.input
examples/NPT_CO2/: methane.def  simulation.input
examples/ReactionEnsemble/: H2.def  N2.def  NH3.def  force_field_mixing_rules.def  pseudo_atoms.def  simulation.input
examples/TMMC-Methane-MOF_CFCMC/: Combine-TMMC-Data.py
examples/breakthrough/: simulation.input
examples/fitting/: Results.dat-MAF-x8-P1-Repeat-433K-o-xylene  run  simulation.input
examples/iast/: run.bat  simulation.input
examples/paralleltempering/: CO2.json  simulation.json
raspa/: CMakeLists.txt  README.md  __init__.py  atom.py  base.py  component.py  forcefield.py  framework.py  intputreader.py  manual.md  mc.py  mcmoveprobabilities.py  pybindings.cpp  raspa_pybindings.cpp  raspa_pybindings.ixx  raspa_pybindings_pybind11.cpp  simulationbox.py  system.py  utils.py
raspa/manual/: installing.md  manual.md  units.md
raspa/raspalib/: __init__.py  __init__.pyi  atom.py  atom.pyi  average_energy_type.py  average_energy_type.pyi  base.py  component.py  component.pyi  connectivity_table.pyi  connectivitytable.py  energy_dudlambda.pyi  energy_factor.py  energy_status.py  energy_status.pyi  enthalpy_of_adsorption_data.pyi  equation_of_state.py  equation_of_state.pyi  force_field.pyi  forcefield.py  framework.py  intra_molecular_potentials.py  intra_molecular_potentials.pyi  loading_data.py  loadings.py  mc.py  mc_move_probabilities.py  mc_move_probabilities.pyi  mc_move_statistics.py  molecular_dynamics.pyi  molecular_viewer.py  molecular_viewer.pyi  monte_carlo.pyi  move.py  move.pyi  move_statistics_double.py  move_statistics_double3.py  move_statistics_double3.pyi  partial_molar_properties_data.pyi  pressure_data.py  (+38 more)
raspa3/: CMakeLists.txt  __init__.py  pybindings.cpp  raspa3.vcxproj  raspa3.vcxproj.filters
raspa3/main/: main.cpp
src/: CMakeLists.txt  makefile  makefile-manual  mdspanwrapper.h  pch.h
src/foundationkit/: archive.ixx  characterset.cpp  characterset.ixx  getopt.cpp  getopt.ixx  hdf5.cpp  hdf5.ixx  indexpath.cpp  indexpath.ixx  json.ixx  lammps.cpp  lammps.ixx  logger.cpp  logger.ixx  mdspan.ixx  print.ixx  run  scanner.cpp  scanner.ixx  stringutils.ixx  threading.cpp  threading.ixx  threadpool.ixx
src/main/: main.cpp
src/mathkit/: bool3.cpp  bool3.ixx  component.cpp  cubic.cpp  cubic.ixx  double2.cpp  double2.ixx  double3.cpp  double3.ixx  double3x3.cpp  double3x3.ixx  double3x3x3.cpp  double3x3x3.ixx  double4.cpp  double4.ixx  double4x3.ixx  double4x4.cpp  double4x4.ixx  entity_hessian_layout.ixx  float2.cpp  float2.ixx  float3.cpp  float3.ixx  float3x3.cpp  float3x3.ixx  float3x4.cpp  float3x4.ixx  float4.cpp  float4.ixx  float4x4.cpp  float4x4.ixx  generalized_hessian.cpp  generalized_hessian.ixx  hashcombine.ixx  hermitian_eigensolver.cpp  hermitian_eigensolver.ixx  int3.cpp  int3.ixx  int3x3.cpp  int3x3.ixx  (+24 more)
src/raspakit/: atom.cpp  atom.ixx  atom_dynamics.cpp  atom_dynamics.ixx  averages.cpp  averages.ixx  bond_potential.cpp  bond_potential.ixx  breakthrough.cpp  breakthrough.ixx  breakthrough_simulation.cpp  breakthrough_simulation.ixx  charge_equilibration_wilmer_snurr.cpp  charge_equilibration_wilmer_snurr.ixx  cif_reader.cpp  cif_reader.ixx  component.cpp  component.ixx  connectivity_table.cpp  connectivity_table.ixx  equation_of_states.cpp  equation_of_states.ixx  forcefield.cpp  forcefield.ixx  fragment.cpp  fragment.ixx  fragment_graph.cpp  fragment_graph.ixx  framework.cpp  framework.ixx  grid.cpp  grid.ixx  grids.cpp  grids.ixx  hardware_info.cpp  hardware_info.ixx  input_reader.cpp  input_reader.ixx  interpolation_energy_grid.cpp  interpolation_energy_grid.ixx  (+58 more)
src/symmetrykit/: skasymmetricatom.cpp  skasymmetricatom.ixx  skasymmetricunit.cpp  skasymmetricunit.ixx  skatom.ixx  skatomcopy.cpp  skatomcopy.ixx  skbandpath.cpp  skbandpath.ixx  skboundingbox.cpp  skboundingbox.ixx  skcell.cpp  skcell.ixx  skdefinitions.cpp  skdefinitions.ixx  skelement.cpp  skelement.ixx  skintegerchangeofbasis.cpp  skintegerchangeofbasis.ixx  skintegersymmetryoperationset.cpp  skintegersymmetryoperationset.ixx  skonethirdseitzmatrix.cpp  skonethirdseitzmatrix.ixx  skparser.cpp  skparser.ixx  skpointgroup.cpp  (+32 more)
tests/: CMakeLists.txt
(+3129 files in other folders)
