[build-system]
requires = ["wheel", "scikit-build-core>=0.10", "setuptools-scm"]
build-backend = "scikit_build_core.build"

[project]
name = "raspalib"
version = "3.0.29"
description = "A general purpose classical simulation package"
authors = [
    { name = "Drs. Youri Ran, University of Amsterdam" },
    { name = "Drs. Shrinjay Sharma, Delft University of Technology" },
    { name = "Drs. Zhao Li, Northwestern University" },
    { name = "Prof. Sofia Calero, Eindhoven University of Technology" },
    { name = "Prof. Thijs Vlugt, Delft University of Technology" },
    { name = "Prof. Randall Q. Snurr, Northwestern University" },
    { name = "Dr. David Dubbeldam, University of Amsterdam", email = "d.dubbeldam@uva.nl" },
]
dependencies = []
requires-python = ">=3.10"
license = { file = "LICENSE.md" }
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    'Typing :: Typed',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: POSIX',
    'Operating System :: Unix',
    'Operating System :: MacOS',
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    'Programming Language :: Python :: 3 :: Only',
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries",
]

[tool.setuptools.dynamic]
version = {attr = "raspalib.__version__"}

[project.urls]
Documentation = "https://iraspa.github.io/RASPA3/"
Repository = "https://github.com/iRASPA/RASPA3"

[tool.scikit-build]
cmake.source-dir = "."
cmake.version = ">=4.3.0"
cmake.build-type = "Release"
wheel.cmake = true
wheel.install-dir = "raspalib"
build-dir = "build/python"
sdist.exclude = ["*.cpp", "*.ixx", "*.pcm", "CMakeLists.txt"]

[tool.setuptools.package-data]
"raspalib" = ["*.so"]
