[build-system]
requires = ["wheel", "scikit-build-core>=0.10", "setuptools-scm"]
build-backend = "scikit_build_core.build"

[project]
name = "raspalib"
version = "3.0.32"
description = "A general purpose classical simulation package"
authors = [
    { name = "Drs. Youri Ran, University of Amsterdam" },
    { name = "Drs. Shrinjay Sharma, Delft University of Technology" },
    { name = "Drs. Zhao Li, Northwestern University" },
    { name = "Prof. Sofia Calero, Eindhoven University of Technology" },
    { name = "Prof. Thijs Vlugt, Delft University of Technology" },
    { name = "Prof. Randall Q. Snurr, Northwestern University" },
    { name = "Dr. David Dubbeldam, University of Amsterdam", email = "d.dubbeldam@uva.nl" },
]
dependencies = []
requires-python = ">=3.12"
license = { file = "LICENSE.md" }
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    'Typing :: Typed',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: POSIX',
    'Operating System :: Unix',
    'Operating System :: MacOS',
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    'Programming Language :: Python :: 3 :: Only',
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries",
]

[tool.setuptools.dynamic]
version = {attr = "raspalib.__version__"}

[project.urls]
Documentation = "https://iraspa.github.io/RASPA3/"
Repository = "https://github.com/iRASPA/RASPA3"

[tool.scikit-build]
cmake.source-dir = "."
cmake.version = ">=4.3.0"
cmake.build-type = "Release"
build-dir = "build/python"
sdist.exclude = ["*.cpp", "*.ixx", "*.pcm", "CMakeLists.txt"]

[tool.setuptools.package-data]
"raspalib" = ["*.so"]

[tool.scikit-build.wheel]
cmake = true
install-dir = "raspalib"
py-api = "cp312"

[tool.cibuildwheel]
archs = ["arm64"]
skip = ["*i686", "*manylinux*"]
build = "cp312-*"


[tool.cibuildwheel.macos]
before-all = "brew install llvm cmake libomp"

[[tool.cibuildwheel.overrides]]
select = "*-macosx*x86_64"
environment = { MACOSX_DEPLOYMENT_TARGET = "10.13", CC = "/usr/local/opt/llvm/bin/clang", CXX = "/usr/local/opt/llvm/bin/clang++" }

[[tool.cibuildwheel.overrides]]
select = "*-macosx*arm64"
environment = { MACOSX_DEPLOYMENT_TARGET = "11.0", CC = "/opt/homebrew/opt/llvm/bin/clang", CXX = "/opt/homebrew/opt/llvm/bin/clang++" }


[tool.cibuildwheel.linux]
repair-wheel-command = "auditwheel repair --exclude libOpenCL.so.1 -w {dest_dir} {wheel}  || bash"
manylinux-x86_64-image = "ghcr.io/iraspa/manylinux_2_28_x86_64-llvm-22:latest"
manylinux-aarch64-image = "ghcr.io/iraspa/manylinux_2_28_aarch64-llvm-22:latest"
musllinux-x86_64-image = "ghcr.io/iraspa/musllinux_1_2_x86_64-llvm-22:latest"
musllinux-aarch64-image = "ghcr.io/iraspa/musllinux_1_2_aarch64-llvm-22:latest"

[[tool.cibuildwheel.overrides]]
select = "*-manylinux_aarch64"

[tool.cibuildwheel.windows]
environment = { CMAKE_ARGS = "-GNinja -DCMAKE_TOOLCHAIN_FILE=C:/vcpkg/scripts/buildsystems/vcpkg.cmake"}

[[tool.scikit-build.overrides]]
if.platform_system = "linux"
if.platform_machine = "x86_64"
cmake.args = ["--preset=python-linux-x86_64"]

[[tool.scikit-build.overrides]]
if.platform_system = "linux"
if.platform_machine = "aarch64"
cmake.args = ["--preset=python-linux-aarch64"]

[[tool.scikit-build.overrides]]
if.platform_system = "darwin"
if.platform_machine = "x86_64"
cmake.args = ["--preset=python-macos-x86_64"]


[[tool.scikit-build.overrides]]
if.platform_system = "darwin"
if.platform_machine = "arm64"
cmake.args = ["--preset=python-macos-arm64"]

[[tool.scikit-build.overrides]]
if.platform_system = "^win32"
if.platform_machine = "(?i)^(AMD64|x86_64)$"
cmake.args = ["--preset=python-windows-x86_64"]
cmake.define.VCPKG_TARGET_TRIPLET = "x64-windows"

[[tool.scikit-build.overrides]]
if.platform_system = "^win32"
if.platform_machine = "(?i)^ARM64$"
cmake.args = ["--preset=python-windows-arm64"]
cmake.define.VCPKG_TARGET_TRIPLET = "arm64-windows"
